# kamon

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  flake.nix
crates/kamon-cli/: Cargo.toml
crates/kamon-cli/src/: main.rs
crates/kamon-render/: Cargo.toml
crates/kamon-render/src/: css.rs  ghostty.rs  glsl.rs  json.rs  lib.rs  rust.rs  scss.rs  svg.rs  tailwind.rs  tui.rs
crates/kamon-tokens/: Cargo.toml
crates/kamon-tokens/src/: brand.rs  color.rs  lib.rs  motion.rs  radius.rs  shader.rs  shadow.rs  spacing.rs  typography.rs
crates/kamon-tokens/tests/: snapshot.rs
src/: detect.rs  icons.rs  lib.rs
