[package]
name = "kamon"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Kamon (家紋) — file type icon provider for Neovim with Nerd Font support"
homepage = "https://github.com/pleme-io/kamon"
repository = "https://github.com/pleme-io/kamon"
readme = "README.md"
license = "MIT"
categories = ["text-editors"]
keywords = ["neovim", "icons", "nerd-font", "devicons"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
