[package]
name = "kamon-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "kamon — CLI for rendering pleme-io design tokens to any supported target"

[[bin]]
name = "kamon"
path = "src/main.rs"

[dependencies]
kamon-tokens = { path = "../kamon-tokens" }
kamon-render = { path = "../kamon-render" }
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true

[lints]
workspace = true
