[package]
name = "kamon-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "kamon — target-specific renderers for the pleme-io design token set"

[dependencies]
kamon-tokens = { path = "../kamon-tokens" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta = { version = "1", features = ["filters"] }

[lints]
workspace = true
