[package]
name = "kamon-tokens"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "kamon — pleme-io design system: typed tokens (colors, typography, spacing, motion, shaders, brand)"

[dependencies]
irodori.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta = { version = "1", features = ["json"] }

[lints]
workspace = true
